Hands-on/07-Istio/3-dark-release/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*" # Domain name of the external website
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: calculator-1-service
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - headers:
            x-my-header:
              exact: newrelease
      route:
        - destination:
            host: calculator-1-service
            subset: v2
    - route:
        - destination:
            host: calculator-1-service
            subset: v1
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: calculator-1-service
spec:
  host: calculator-1-service
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
